<resources>
    <string name="app_name">HelloWorld_view</string>
    <string name="android_practice">Android practice</string>
    <string name="button_text">button %d</string>
    <string name="constraint_layout_button">constraint_layout</string>
    <string name="login_button">login</string>
    <string name="recyclerView_button">RecyclerView</string>
    <string name="thread_button">thread</string>
    <string name="share_button">SharePreference</string>
    <string name="data_store_button">DataStore</string>
    <string name="compose_button">compose</string>
    <string name="share_preference_key">com.thoughtworks.hello_android.shareFile</string>
    <string name="fragment_button">fragment</string>
    <string name="pick_button">pick_contact</string>
    <string name="hello_text">Hello!</string>
    <string name="github_picture">github Picture</string>
    <string name="title_Description">title</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="UsernamePlaceHolder">Username</string>
    <string name="PassWordPlaceHolder">Password</string>
    <string name="CheckBoxHint">Remember me</string>
    <string name="ForgotPassword">Fogot password?</string>
    <string name="LoginButtonText">Login</string>
    <string name="connectWithHint">or connect with</string>
    <string name="emailText">Sign Up with E-mail</string>
    <string name="contractPhotoDescription">contractPhoto</string>
    <string name="navigation_button1">Android</string>
    <string name="navigation_button2">Java</string>
    <string name="android_info">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="java_info">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="bottom_hint">到底了</string>
    <string name="avatar_photo">avatar photo</string>
    <string name="thread_button_start_hint">按下开始计数</string>
    <string name="thread_button_end_hint">计数完成，可再次按下计数</string>
    <string name="hint_button_text">知道了</string>
    <string name="ishintshownKey">isHintShown</string>
    <string name="SpHint2">欢迎您回来</string>
    <string name="SpHint1">提示信息：\n 点击：\"知道了\"不再显示</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>