<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/github_picture"
        android:src="@drawable/title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:autofillHints="@string/UsernamePlaceHolder"
        android:background="@drawable/border"
        android:hint="@string/UsernamePlaceHolder"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/UsernamePlaceHolder"
        android:background="@drawable/border"
        android:hint="@string/UsernamePlaceHolder"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.5dp"
        android:layout_marginEnd="37.5dp"
        android:text="@string/CheckBoxHint"
        android:textColor="@color/frontColor"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/passWord"
        app:layout_constraintTop_toBottomOf="@id/passWord" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:textColor="@color/frontColor"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/remember"
        app:layout_constraintEnd_toEndOf="@id/passWord" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.5dp"
        android:backgroundTint="@color/loginButtonColor"
        android:text="@string/LoginButtonText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

    <TextView
        android:id="@+id/connectWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26.5dp"
        android:text="@string/connectWithHint"
        android:textColor="@color/connectWithColor"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <ImageView
        android:id="@+id/faceBookPic"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="29.5dp"
        android:contentDescription="@string/github_picture"
        android:src="@drawable/facebook_logo"
        app:layout_constraintStart_toStartOf="@id/passWord"
        app:layout_constraintTop_toBottomOf="@id/connectWith" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="29.5dp"
        android:contentDescription="@string/github_picture"
        android:src="@drawable/twitter_logo"
        app:layout_constraintEnd_toEndOf="@id/passWord"
        app:layout_constraintTop_toBottomOf="@id/connectWith" />

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/sign_with_email_background"
        android:text="@string/emailText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/faceBookPic" />
    <!--不知道为什么这个background没有生效，先去吃饭了，感谢coach review-->
</androidx.constraintlayout.widget.ConstraintLayout>